# Mandebrot-set-render

./: CMakeLists.txt  LICENSE  README.md
src/: main.c
